// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click option 1`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar van-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">B</div></span></div>
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">B</div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px;">
      <div class="van-overlay" style="z-index: 2013; animation-duration: 0.2s; position: absolute;" name="van-fade"></div>
      <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s; display: none; z-index: 2014;" name="van-popup-slide-top">
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option">
          <div class="van-cell__title"><span>A</span></div>
        </div>
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option van-dropdown-item__option--active">
          <div class="van-cell__title"><span>B</span></div>
          <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon">
              <!----></i></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`close-on-click-outside 1`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar van-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px;">
      <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s; display: none;" name="van-popup-slide-top">
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option van-dropdown-item__option--active">
          <div class="van-cell__title"><span>A</span></div>
          <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option">
          <div class="van-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`destroy one item 1`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  </div>
  <!---->
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`didn\`t find matched option 1`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis"></div></span></div>
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis"></div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`direction up 1`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--down"><div class="van-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--down"><div class="van-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--up" style="bottom: 0px; display: none;">
      <!---->
    </div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--up" style="bottom: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`direction up 2`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar van-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--active"><div class="van-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--down"><div class="van-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--up" style="bottom: 1000px;">
      <div class="van-popup van-popup--bottom van-dropdown-item__content" style="transition-duration: 0.2s;" name="van-popup-slide-bottom">
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option van-dropdown-item__option--active">
          <div class="van-cell__title"><span>A</span></div>
          <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option">
          <div class="van-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--up" style="bottom: 1000px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`disable close-on-click-outside 1`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar van-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--active van-dropdown-menu__title--down"><div class="van-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px;">
      <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s;" name="van-popup-slide-top">
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option van-dropdown-item__option--active">
          <div class="van-cell__title"><span>A</span></div>
          <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option">
          <div class="van-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`disable dropdown item 1`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar">
    <div role="button" tabindex="-1" class="van-dropdown-menu__item van-dropdown-menu__item--disabled"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`render option icon 1`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar van-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--active van-dropdown-menu__title--down"><div class="van-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px;">
      <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s;" name="van-popup-slide-top">
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option van-dropdown-item__option--active"><i class="van-icon van-icon-success van-cell__left-icon">
            <!----></i>
          <div class="van-cell__title"><span>A</span></div>
          <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option"><i class="van-icon van-icon-success van-cell__left-icon">
            <!----></i>
          <div class="van-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`show dropdown item 1`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar van-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--active van-dropdown-menu__title--down"><div class="van-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px;">
      <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s;" name="van-popup-slide-top">
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option van-dropdown-item__option--active">
          <div class="van-cell__title"><span>A</span></div>
          <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option">
          <div class="van-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`show dropdown item 2`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar van-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--active van-dropdown-menu__title--down"><div class="van-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px;">
      <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0s; display: none;" name="van-popup-slide-top">
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option van-dropdown-item__option--active">
          <div class="van-cell__title"><span>A</span></div>
          <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option">
          <div class="van-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px;">
      <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s;" name="van-popup-slide-top">
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option van-dropdown-item__option--active">
          <div class="van-cell__title"><span>A</span></div>
          <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option">
          <div class="van-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`show dropdown item 3`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar van-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px;">
      <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0s; display: none;" name="van-popup-slide-top">
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option van-dropdown-item__option--active">
          <div class="van-cell__title"><span>A</span></div>
          <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option">
          <div class="van-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px;">
      <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s; display: none;" name="van-popup-slide-top">
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option van-dropdown-item__option--active">
          <div class="van-cell__title"><span>A</span></div>
          <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="van-cell van-cell--clickable van-dropdown-item__option">
          <div class="van-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`title prop 1`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">Title</div></span></div>
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">Title</div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`title slot 1`] = `
<div class="van-dropdown-menu">
  <div class="van-dropdown-menu__bar">
    <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">
            Custom Title
          </div></span></div>
  </div>
  <div>
    <div class="van-dropdown-item van-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;
